# proiect_robot_ros2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot3_football/share/turtlebot3_football/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_football/share/turtlebot3_football/launch/: spawn_robot_launch.py
install/turtlebot3_football/share/turtlebot3_football/worlds/: football_field.world
log/: latest_build
src/turtlebot3_football/: MANIFEST.in  package.xml  setup.py
src/turtlebot3_football/launch/: spawn_robot_launch.py
src/turtlebot3_football/turtlebot3_football/: ball_chaser.py  referee.py
src/turtlebot3_football/worlds/: football_field.world
